[package]

name = "striple"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[features]
default = ["public_ripemd","serialize","public_openssl","cryptoecdsa","opensslrsa"]
serialize = ["rustc-serialize"]
opensslrsa = ["openssl"]
cryptoecdsa = ["rust-crypto"]
public_ripemd = ["uuid","rust-crypto"]
public_openssl = ["uuid","openssl"]


[dependencies]
log = "0.3.1"
# TODO env_logger for test only??
env_logger = "0.3.0"
num = "0.1.24"
# TODO conf for scheme + test only
rand = "0.3.8"
# TODO copy method or find alternatives
byteorder = "0.3.9"

[dependencies.rustc-serialize]
version = "0.3.14"
optional = true

[dependencies.openssl]
version = "0.6.2"
optional = true

[dependencies.rust-crypto]
version = "0.2.31"
optional = true

[dependencies.uuid]
version = "0.1.17"
optional = true

